interface Iterator {
    boolean hasNext();
    Task next();
}